# PlaylistReader

./: .gitignore
music-downloader/: README.md  pyproject.toml
music-downloader/music_downloader/: cli.py  downloader.py  metadata.py
music-downloader/music_downloader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
playlist-downloader/: README.md  pyproject.toml
playlist-downloader/playlist_downloader/: cli.py  downloader.py  failed_tracks.py  manifest_writer.py  metadata.py  models.py  reporters.py  search_resolution.py  services.py  skipped_tracks.py  unresolved_tracks.py  yaml_parser.py
playlist-downloader/playlist_downloader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
playlist-downloader/playlist_downloader/commands/: __init__.py  download.py  download_modes.py  review.py
playlist-downloader/playlist_downloader/models/: download_artifact.py  download_options.py  download_summary.py  playlist.py  review_summary.py  scored_candidate.py  search_candidate.py  track_download_result.py  track_review_result.py
playlist-downloader/playlist_downloader/parsers/: playlist_parser.py
playlist-downloader/playlist_downloader/services/: download_reporter.py  metadata_reader.py  playlist_download_service.py  playlist_review_service.py  review_reporter.py  rich_download_reporter.py  search_resolution.py  track_downloader.py
playlist-downloader/playlist_downloader/utils/: file_utils.py  text_utils.py  time_utils.py
playlist-downloader/tests/: test_cli.py  test_downloader.py  test_services.py  test_yaml_parser.py
(+23 files in other folders)
